--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
             <input type="text" name="" placeholder="Telefono">
             <input type="password" name="" placeholder="Contraseña">
             <input type="password" name="" placeholder="Confirmar Contraseña"><br>
-            <input type="checkbox" name="termsCond"><label> Al registrarse, acepta los <strong style="color:#fa983a">terminos y condiciones.</strong></label><br>
+            <label><input type="checkbox" name="termsCond"> Al registrarse, acepta los <strong style="color:#fa983a">terminos y condiciones.</strong></label>
             <div id="info"></div>
             <input type="submit" value="Crear Cuenta">
         </form>
