--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html"><img src="Assets/imgs/logo.png" alt="" class="logo"></a>
         <nav class="menu">
                 <ul class="nav_links">
-                    <li><a href="login.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Dibujos</a></li>
                     <li><a href="login.html" id="login">Login</a></li>
                     <li><a href="register.html" id="login">Register</a></li>
@@ -50,6 +50,12 @@
             <a href="#" class="btnpartes">Banner</a>
             <a href="#" class="btnpartes">Dibujos</a>
     </div>
+    <div class="recome">
+        <h3><strong class="h3diseño" >Diseños</strong> que podrian gustarte</h3>
+    </div>
+    <div class="recome" id="Recome">
+        <h3><strong class="h3diseño" >Diseños</strong> que podrian gustarte</h3>
+    </div>
     <div class="container">
         <div class="card">
             <img src="Assets/imgs/cards/worldwide.png" alt="Denim Jeans" style="width:100%">
@@ -60,7 +66,7 @@
         <div class="card">
             <img src="Assets/imgs/cards/sent.png" alt="Denim Jeans" style="width:100%">
             <h1>User name</h1>
-            <p class="price">$19.99</p>
+            <p class="price">$19.91</p>
             <p><button>Ver Producto</button></p>
         </div>
         <div class="card">
@@ -75,10 +81,37 @@
             <p class="price">$19.99</p>
             <p><button>Ver Producto</button></p>
         </div>
+        <div class="card">
+            <img src="Assets/imgs/cards/diagram.png" alt="Denim Jeans" style="width:100%">
+            <h1>User name</h1>
+            <p class="price">$19.99</p>
+            <p><button>Ver Producto</button></p>
+        </div>
+        <div class="card">
+            <img src="Assets/imgs/cards/team.png" alt="Denim Jeans" style="width:100%">
+            <h1>User name</h1>
+            <p class="price">$19.99</p>
+            <p><button>Ver Producto</button></p>
+        </div>
+        <div class="card">
+            <img src="Assets/imgs/cards/watch.png" alt="Denim Jeans" style="width:100%">
+            <h1>User name</h1>
+            <p class="price">$19.99</p>
+            <p><button>Ver Producto</button></p>
+        </div>
+        <div class="card">
+            <img src="Assets/imgs/cards/pyramid-chart.png" alt="Denim Jeans" style="width:100%">
+            <h1>User name</h1>
+            <p class="price">$19.99</p>
+            <p><button>Ver Producto</button></p>
+        </div>
     </div>
     
     <footer class="footer-main">
-
+        <div class="div-footer">
+            <h4 class="Contacto" style="cursor: pointer;"><strong style="color: #fa983a; cursor: pointer;">Contacto: </strong> lalolandia@gmail.com</h4>
+            <h2>PorArt 2021</h2>
+        </div>
     </footer>
     <script src="Assets/js/slider.js"></script>
 </body>
