--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img src="Assets/imgs/logo.png" alt="" class="logo"></a>
         <nav class="menu">
                 <ul class="nav_links">
-                    <li><a href="login.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Dibujos</a></li>
                     <li><a href="login.html" id="login">Login</a></li>
                     <li><a href="register.html" id="login">Register</a></li>
