--- a/CompraF.html
+++ b/CompraF.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Assets/css/navbar.css" type="text/css">
+    <link rel="stylesheet" href="Assets/css/footer.css">
+    <link rel="stylesheet" href="Assets/css/CompraF.css">
     <title>Compra Finalizada</title>
 </head>
 <body>
-    
+    <header>
+        <a href="index.html"><img src="Assets/imgs/logo.png" alt="" class="logo"></a>
+        <nav class="menu">
+                <ul class="nav_links">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Diseño.html">Dibujos</a></li>
+                    <li><a href="login.html" id="login">Login</a></li>
+                    <li><a href="register.html" id="login">Register</a></li>
+                    <li><img src="#" alt=""></li>
+                </ul>
+            </img>
+        </nav>
+    </header>
+    <div class="container">
+        <h3>Compra Finalizada con éxito</h3>
+
+        <div class="container-compra">
+            <p>MUCHAS GRACIAS POR SU COMPRA!</p>
+            <h4>Por favor haga <a href="chat.html">click aquí</a> para contactarte con el creador.</h4>
+            <img src="Assets/imgs/cards/team.png">
+            <h4>O contactese con el más tarde a través de su perfil.</h4>
+        </div>
+    </div>
+    <footer class="footer-main">
+        <div class="div-footer">
+            <h4 class="Contacto" style="cursor: pointer;"><strong style="color: #fa983a; cursor: pointer;">Contacto: </strong> lalolandia@gmail.com</h4>
+            <h2>PorArt 2021</h2>
+        </div>
+    </footer>
 </body>
 </html>
