--- a/Diseño.html
+++ b/Diseño.html
@@ -28,7 +28,7 @@
             <h3>Diseño</h3>
         </div>
         <div class="contenido">
-            <aside class="side-left">
+            <div class="side-left">
                 <div class="first-side-left">
                     <h4>Tipo de Diseño</h4>
                     <label><input type="checkbox">Afiche</label><br>
@@ -43,7 +43,16 @@
                     <label><input type="checkbox" name="" id="">Etiquetas</label><br>
                     <label><input type="checkbox" name="" id="">Etiquetas</label>
                 </div>
-            </aside>
+            </div>
+            <div class="card">
+                <img src="Assets/imgs/cards/worldwide.png" style="width:100%">
+            </div>
+            <div class="card">
+                <img src="Assets/imgs/cards/sent.png" style="width:100%">
+            </div>
+            <div class="card">
+                <img src="Assets/imgs/cards/target.png" style="width:100%">
+            </div>
             <div class="card">
                 <img src="Assets/imgs/cards/worldwide.png" style="width:100%">
             </div>
